--- a/Software/WeatherStation.ioc
+++ b/Software/WeatherStation.ioc
@@ -53,7 +53,7 @@ Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
 Mcu.Pin10=PA3
 Mcu.Pin11=PA5
-Mcu.Pin12=PB10
+Mcu.Pin12=PB13
 Mcu.Pin13=PC9
 Mcu.Pin14=PA9
 Mcu.Pin15=PA10
@@ -129,15 +129,13 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB10.Mode=Full_Duplex_Master
-PB10.Signal=SPI2_SCK
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO-TRACESWO).GPIO_Label=SWO
 PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
 PC0.Signal=ADCx_IN1
-PC1.GPIOParameters=GPIO_Label
-PC1.GPIO_Label=SPI2_CSB
 PC1.Locked=true
 PC1.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
@@ -161,10 +159,8 @@ PC9.GPIO_Label=DHT11_DATA
 PC9.Locked=true
 PC9.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).Locked=true
-PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Locked=true
-PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
 PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -195,72 +191,74 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_DMA_Init-DMA-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true
-RCC.ADCFreq_Value=32000000
-RCC.AHBFreq_Value=40000000
-RCC.APB1Freq_Value=40000000
-RCC.APB1TimFreq_Value=40000000
-RCC.APB2Freq_Value=40000000
-RCC.APB2TimFreq_Value=40000000
-RCC.CortexFreq_Value=40000000
-RCC.DFSDMFreq_Value=40000000
-RCC.FCLKCortexFreq_Value=40000000
+RCC.ADCFreq_Value=64000000
+RCC.AHBFreq_Value=80000000
+RCC.APB1Freq_Value=80000000
+RCC.APB1TimFreq_Value=80000000
+RCC.APB2Freq_Value=80000000
+RCC.APB2TimFreq_Value=80000000
+RCC.CortexFreq_Value=80000000
+RCC.DFSDMFreq_Value=80000000
+RCC.FCLKCortexFreq_Value=80000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=40000000
+RCC.HCLKFreq_Value=80000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=40000000
-RCC.I2C2Freq_Value=40000000
-RCC.I2C3Freq_Value=40000000
+RCC.I2C1Freq_Value=80000000
+RCC.I2C2Freq_Value=80000000
+RCC.I2C3Freq_Value=80000000
 RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PLLSourceVirtual,PREFETCH_ENABLE,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
-RCC.LPTIM1Freq_Value=40000000
-RCC.LPTIM2Freq_Value=40000000
-RCC.LPUART1Freq_Value=40000000
+RCC.LPTIM1Freq_Value=80000000
+RCC.LPTIM2Freq_Value=80000000
+RCC.LPUART1Freq_Value=80000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=40000000
+RCC.MCO1PinFreq_Value=80000000
 RCC.MSI_VALUE=4000000
 RCC.PLLN=10
-RCC.PLLPoutputFreq_Value=11428571.42857143
-RCC.PLLQoutputFreq_Value=40000000
-RCC.PLLRCLKFreq_Value=40000000
-RCC.PLLSAI1PoutputFreq_Value=9142857.142857144
-RCC.PLLSAI1QoutputFreq_Value=32000000
-RCC.PLLSAI1RoutputFreq_Value=32000000
-RCC.PLLSAI2PoutputFreq_Value=9142857.142857144
-RCC.PLLSAI2RoutputFreq_Value=32000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.PLLPoutputFreq_Value=22857142.85714286
+RCC.PLLQoutputFreq_Value=80000000
+RCC.PLLRCLKFreq_Value=80000000
+RCC.PLLSAI1PoutputFreq_Value=18285714.285714287
+RCC.PLLSAI1QoutputFreq_Value=64000000
+RCC.PLLSAI1RoutputFreq_Value=64000000
+RCC.PLLSAI2PoutputFreq_Value=18285714.285714287
+RCC.PLLSAI2RoutputFreq_Value=64000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSI
 RCC.PREFETCH_ENABLE=1
-RCC.PWRFreq_Value=40000000
-RCC.RNGFreq_Value=32000000
-RCC.SAI1Freq_Value=9142857.142857144
-RCC.SAI2Freq_Value=9142857.142857144
-RCC.SDMMCFreq_Value=32000000
-RCC.SWPMI1Freq_Value=40000000
-RCC.SYSCLKFreq_VALUE=40000000
+RCC.PWRFreq_Value=80000000
+RCC.RNGFreq_Value=64000000
+RCC.SAI1Freq_Value=18285714.285714287
+RCC.SAI2Freq_Value=18285714.285714287
+RCC.SDMMCFreq_Value=64000000
+RCC.SWPMI1Freq_Value=80000000
+RCC.SYSCLKFreq_VALUE=80000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=40000000
-RCC.UART5Freq_Value=40000000
-RCC.USART1Freq_Value=40000000
-RCC.USART2Freq_Value=40000000
-RCC.USART3Freq_Value=40000000
-RCC.USBFreq_Value=32000000
-RCC.VCOInputFreq_Value=8000000
-RCC.VCOOutputFreq_Value=80000000
-RCC.VCOSAI1OutputFreq_Value=64000000
-RCC.VCOSAI2OutputFreq_Value=64000000
+RCC.UART4Freq_Value=80000000
+RCC.UART5Freq_Value=80000000
+RCC.USART1Freq_Value=80000000
+RCC.USART2Freq_Value=80000000
+RCC.USART3Freq_Value=80000000
+RCC.USBFreq_Value=64000000
+RCC.VCOInputFreq_Value=16000000
+RCC.VCOOutputFreq_Value=160000000
+RCC.VCOSAI1OutputFreq_Value=128000000
+RCC.VCOSAI2OutputFreq_Value=128000000
 SH.ADCx_IN1.0=ADC1_IN1,IN1-Single-Ended
 SH.ADCx_IN1.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SPI2.CalculateBaudRate=20.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI2.CalculateBaudRate=40.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-TIM2.IPParameters=Prescaler,Period
-TIM2.Period=730959
-TIM2.Prescaler=65535
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM2.Period=9999
+TIM2.Prescaler=7199
 TIM3.IPParameters=Prescaler
 TIM3.Prescaler=80-1
 USART1.IPParameters=VirtualMode-Asynchronous
